# SteerLab

./: CLAUDE.md  GEMINI.md  README.md  debug_evaluation.py  pyproject.toml  quick_eval.py
data/: formality_negative.json  formality_positive.json
data/paper_reproduction/: age_negative.json  age_positive.json  ambiance_negative.json  ambiance_positive.json  cost_negative.json  cost_positive.json  culture_negative.json  culture_positive.json  time_negative.json  time_positive.json
docs/: RESEARCH_ARTICLE.md  USER_WORKFLOW.md  api-reference.md  architecture.md  contributing.md  overview.md  quick-start.md  roadmap.md  technical-specification.md
examples/: basic_steering_example.py  evaluate_steering_demo.py  paper_reproduction_example.py
results/: steering_evaluation_demo.json  steering_summary_report.md
steerlab/: __init__.py  cli.py
steerlab/api/: schemas.py  server.py
steerlab/core/: model.py  vectors.py
steerlab/evaluation/: __init__.py  compare.py  metrics.py
steerlab/interfaces/: calibrate.py  learn.py  select.py
tests/api/: test_server.py
tests/core/: test_model.py  test_vectors.py
tests/data/: example_negative.json  example_positive.json
vectors/: cost_vectors.safetensors  formality_vectors.safetensors
