[project]
name = "steerlab"
version = "0.1.0"
description = "Implementation of 'Steerable Chatbots: Personalizing LLMs with Preference-Based Activation Steering' (arXiv:2505.04260v2)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "SteerLab Contributors"},
]
license = {text = "MIT"}
keywords = ["llm", "steering", "personalization", "nlp", "transformers", "activation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "safetensors>=0.4.0",
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "uvicorn>=0.24.0",
    "click>=8.1.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.19.0",
    "matplotlib>=3.10.5",
    "tf-keras>=2.18.0",
    "sentence-transformers>=5.1.0",
    "scikit-learn>=1.7.1",
    "pandas>=2.3.2",
    "rich>=14.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # For testing FastAPI
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
steerlab = "steerlab.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
